Fix wrapping issue on programme page (76)

--- a/front/style/_content.scss
+++ b/front/style/_content.scss
@@ -421,6 +421,7 @@
 
         h2 {
             @include text--large;
+            max-width: 90%;
         }
 
         div {
